.k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: laravel-12-app-ingress
  labels:
    app: laravel-12-app
  annotations:
    # kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    # cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  # tls:
  # - hosts:
  #   - your-domain.com
  #   secretName: laravel-12-tls-secret
  rules:
  # - host: your-domain.com
  #   http:
  #     paths:
  #     - path: /
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: laravel-12-nginx
  #           port:
  #             number: 80
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: laravel-12-nginx
            port:
              number: 80
